--- a/applications/portal/vocabs/assets/less/ands-vocab.less
+++ b/applications/portal/vocabs/assets/less/ands-vocab.less
@@ -393,5 +393,13 @@ ul.pagi {
   }
 }
 
+.published_title{
+  word-wrap: break-word;
+  max-width: 510px;
+}
+.draft_title{
+  word-wrap: break-word;
+  max-width: 580px;
+}
 @import "ands-vocabs-visualise";
 @import "ands-vocabs-box";
